# hanriman.github.io

./: .gitignore  CNAME  Cargo.toml  README.md  index.html  projects.html  resume.html  style.css
.github/workflows/: gh-pages-deploy.yml
assets/js/: main.js
module/: projects.html  resume.html
module/projects/: take-a-deep-breath.html
scripts/: canvas.js  jquery.min.js  pt.min.js  script.js
src/: app.rs  lib.rs  main.rs  router.rs
src/components/module/: home.rs  mod.rs  page_not_found.rs  projects.rs  resume.rs
src/components/module/projects_content/: mod.rs  personal_website.rs  personal_website_with_rust.rs  take_a_deep_breath.rs
src/components/shared/: back_project_button.rs  footer.rs  header.rs  main_frame.rs  mod.rs  new_tab_svg.rs  theme_button.rs
src/components/shared/svg/: mod.rs  new_tab_svg.rs  props.rs  themes_svg.rs
src/utils/: mod.rs  router.rs  theme.rs
style/: style.css
